--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,15 @@ h1 {
     font-size: 3rem;
 }
 
+a:link {
+    text-decoration: none;
+    color: #000;
+}
+
+a:visited {
+    color: #000;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -66,6 +75,12 @@ img {
 .population {
     font-size: 0.7rem;
     margin-top: -15px;
+}
+
+.flag {
+    width: 20px;
+    margin: 0 10px 0 0;
+    display: inline-block;
 }
 
 ul {
